; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/mac-capture/extr_mac-audio.c_notification_callback.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/mac-capture/extr_mac-audio.c_notification_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }
%struct.coreaudio_data = type { i32, i32 }

@PROPERTY_DEFAULT_DEVICE = common dso_local global i64 0, align 8
@LOG_INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [73 x i8] c"coreaudio: device '%s' disconnected or changed.  attempting to reconnect\00", align 1
@noErr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, %struct.TYPE_3__*, i8*)* @notification_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @notification_callback(i32 %0, i32 %1, %struct.TYPE_3__* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.coreaudio_data*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store %struct.TYPE_3__* %2, %struct.TYPE_3__** %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = load i8*, i8** %8, align 8
  %11 = bitcast i8* %10 to %struct.coreaudio_data*
  store %struct.coreaudio_data* %11, %struct.coreaudio_data** %9, align 8
  %12 = load %struct.coreaudio_data*, %struct.coreaudio_data** %9, align 8
  %13 = call i32 @coreaudio_stop(%struct.coreaudio_data* %12)
  %14 = load %struct.coreaudio_data*, %struct.coreaudio_data** %9, align 8
  %15 = call i32 @coreaudio_uninit(%struct.coreaudio_data* %14)
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i64 0
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = load i64, i64* @PROPERTY_DEFAULT_DEVICE, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %22, label %25

22:                                               ; preds = %4
  %23 = load %struct.coreaudio_data*, %struct.coreaudio_data** %9, align 8
  %24 = getelementptr inbounds %struct.coreaudio_data, %struct.coreaudio_data* %23, i32 0, i32 0
  store i32 300, i32* %24, align 4
  br label %28

25:                                               ; preds = %4
  %26 = load %struct.coreaudio_data*, %struct.coreaudio_data** %9, align 8
  %27 = getelementptr inbounds %struct.coreaudio_data, %struct.coreaudio_data* %26, i32 0, i32 0
  store i32 2000, i32* %27, align 4
  br label %28

28:                                               ; preds = %25, %22
  %29 = load i32, i32* @LOG_INFO, align 4
  %30 = load %struct.coreaudio_data*, %struct.coreaudio_data** %9, align 8
  %31 = getelementptr inbounds %struct.coreaudio_data, %struct.coreaudio_data* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @blog(i32 %29, i8* getelementptr inbounds ([73 x i8], [73 x i8]* @.str, i64 0, i64 0), i32 %32)
  %34 = load %struct.coreaudio_data*, %struct.coreaudio_data** %9, align 8
  %35 = call i32 @coreaudio_begin_reconnect(%struct.coreaudio_data* %34)
  %36 = load i32, i32* %5, align 4
  %37 = call i32 @UNUSED_PARAMETER(i32 %36)
  %38 = load i32, i32* %6, align 4
  %39 = call i32 @UNUSED_PARAMETER(i32 %38)
  %40 = load i32, i32* @noErr, align 4
  ret i32 %40
}

declare dso_local i32 @coreaudio_stop(%struct.coreaudio_data*) #1

declare dso_local i32 @coreaudio_uninit(%struct.coreaudio_data*) #1

declare dso_local i32 @blog(i32, i8*, i32) #1

declare dso_local i32 @coreaudio_begin_reconnect(%struct.coreaudio_data*) #1

declare dso_local i32 @UNUSED_PARAMETER(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
